# TermiDev

./: README.md  tdev-c.pl  update.sh
configtool/: CMakeLists.txt  build.sh  tool
configtool/src/: main.c
module/PrGen/: CMakeLists.txt  pgc.pl  pgtmgr.pl  test
module/PrGen/template/: .list
module/PrGen/template/c_executable/: .template  CMakeLists.txt
module/PrGen/template/c_library/: .template  CMakeLists.txt  library.c  library.h
